--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header {
 .middleboxes {
     background-color: lightgray;
     width: 450px;
-    height: 500px;
+    height: 60vh;
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 400px;
@@ -25,8 +25,9 @@ footer {
     display: flex;
     background-color: lightgray;
     width: 100%;
-    height: 200px;
+    height: 180px;
     clear: both;
+    padding: 20px;
 }
 
 .footer_box {
@@ -34,6 +35,12 @@ footer {
     flex: 1 0 20px;
     background-color: gray;
     width: 150px;
-    height: 150px;
-    margin: 1%;
+    height: 180px;
+
+}
+.footer_box:nth-child(1){
+    margin-right: 20px;
+}
+.footer_box:nth-child(2){
+    margin-right: 20px;
 }
