--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,14 @@ header {
     flex-shrink: 0;
     flex-basis: 400px;
     margin: 1%;
+    padding:20px;
 }
 
 footer {
     display: flex;
     background-color: lightgray;
     width: 100%;
-    height: 180px;
+    height: 240px;
     clear: both;
     padding: 20px;
 }
@@ -40,7 +41,8 @@ footer {
     flex: 1 0 20px;
     background-color: gray;
     width: 150px;
-    height: 180px;
+    height: 200px;
+    padding: 20px;
 
 }
 .footer_box:nth-child(1){
