--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,135 @@
-#container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    margin: auto;
+
+
+.full-container {
+    font-size: 15px;
+    color: rgb(85, 85, 85);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.container {
+    width: 1000px;
+    height: 100vh;
+    background-color: white;
+    margin: 0 auto;
+}
+h2 {
+    margin-bottom: 0px;
+}
+p {
+    margin-top: 0px;
 }
 
-header {
+.horizontal-row {
     width: 100%;
-    height: 100px;
-    background-color: lightgray;
+    margin-bottom: 20px;
+}
+.header {
+    text-align: center;
+    background-color: gainsboro;
+    padding: 20px;
+    padding-top: 10px;
+}
+.middle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.middle-box {
+    min-height: 200px;
+    width: 45%;
+    background-color: gainsboro;
+    padding: 20px;
+}
+.middle-box p{
+margin-top: -1rem;
+}
+.footer-vessel {
+    background-color: gainsboro;
+}
+.footer-object {
+    padding-bottom: 15px;
+    padding-top: 15px;
+    min-height: 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.footer-package{
+    min-height: 98%;
+    width: 27%;
+    padding: 20px;
+    background-color: rgb(173, 173, 173);
+}
+a{
+    text-decoration: none;
+    color: inherit;
+}
+.Site-Goals{
+    margin-top: 20px;
+    font-weight: bold;
 }
 
-@media (max-width: 800px) {
-    .middleboxes {
-      flex-direction: column;
+@media only screen and (max-width: 600px) {
+    .full-container {
+        color:rgb(5, 7, 24);
+        background-color: rgb(46, 167, 76);
+        font-family: 'Times New Roman', Times, serif
+
     }
-  }
-.middleboxes {
-    background-color: lightgray;
-    width: 450px;
-    height: 60vh;
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: 400px;
-    margin: 1%;
-    padding:20px;
+
+    .container {
+        background-color: rgb(46, 167, 76);
+    }
+    .footer-vessel {
+        background-color: rgb(46, 167, 76);
+    }
+    .footer-package {
+        background-color: rgb(46, 167, 76);
+    }
+    .header {
+        background-color: rgb(46, 167, 76);
+    }
+    .middle-box {
+        background-color: rgb(46, 167, 76);
+    }
 }
 
-footer {
-    display: flex;
-    background-color: lightgray;
-    width: 100%;
-    height: 240px;
-    clear: both;
-    padding: 20px;
-}
+@media screen and (max-width: 768px) {
 
-.footer_box {
-    display: flex;
-    flex: 1 0 20px;
-    background-color: gray;
-    width: 150px;
-    height: 200px;
-    padding: 20px;
+    body{
+        position: relative;
+    }
 
-}
-.footer_box:nth-child(1){
-    margin-right: 20px;
-}
-.footer_box:nth-child(2){
-    margin-right: 20px;
+    .horizontal-row{
+        width: 90%;
+
+    }
+
+    .header{
+        width: 100%;
+        height: 10vh;
+    }
+
+    .middle-row{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .middlebox{
+        width: 100%;
+        height: 50vh;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .footer_box{
+        margin: 2.5%;
+        width: 95%;
+    }
 }
