--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
-
+/* arvo-regular - latin */
+@font-face {
+    font-family: 'Arvo';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/arvo-v14-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/arvo-v14-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
 
 .full-container {
     font-size: 15px;
     color: rgb(85, 85, 85);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Avro', Arial, Helvetica, sans-serif, Times, serif;
 }
 .container {
     width: 1000px;
@@ -28,13 +36,14 @@ p {
     padding: 20px;
     padding-top: 10px;
 }
+
 .middle {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 .middle-box {
-    min-height: 200px;
+    min-height: 220px;
     width: 45%;
     background-color: gainsboro;
     padding: 20px;
@@ -68,68 +77,83 @@ a{
     margin-top: 20px;
     font-weight: bold;
 }
+.slidecontainer {
+    width: 100%; /* Width of the outside container */
+}
+
+/* CSS For Slider taken from https://www.w3schools.com/howto/howto_js_rangeslider.asp
+/* The slider itself */
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 25px; /* Specified height */
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #04AA6D; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #04AA6D; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+}
 
 @media only screen and (max-width: 600px) {
-    .full-container {
-        color:rgb(5, 7, 24);
-        background-color: rgb(46, 167, 76);
-        font-family: 'Times New Roman', Times, serif
-
+    .main-container {
+        color:rgb(153, 19, 146);
+        background-color: rgb(255, 157, 247);
+        font-family: "Comic Sans MS", sans-serif;
     }
 
     .container {
-        background-color: rgb(46, 167, 76);
+        background-color: rgb(255, 157, 247);
+        width: 100%;
+        height: 200vh;
     }
-    .footer-vessel {
-        background-color: rgb(46, 167, 76);
+    .footer-container {
+        background-color: rgb(219, 140, 250);
     }
+    .footer-box {
+        margin-bottom: 15px;
+        width:auto;
+        background-color: rgb(201, 112, 236);
+    }
+
     .footer-package {
-        background-color: rgb(46, 167, 76);
+        display: inline;
+        background-color: rgb(201, 112, 236);
     }
+    
     .header {
-        background-color: rgb(46, 167, 76);
+        background-color: rgb(219, 140, 250);
     }
     .middle-box {
-        background-color: rgb(46, 167, 76);
+        background-color: rgb(219, 140, 250);
+        width: 40%;
     }
 }
 
-@media screen and (max-width: 768px) {
-
-    body{
-        position: relative;
-    }
-
-    .horizontal-row{
-        width: 90%;
-
-    }
-
-    .header{
-        width: 100%;
-        height: 10vh;
-    }
-
-    .middle-row{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .middlebox{
-        width: 100%;
-        height: 50vh;
-    }
-
-    footer{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-    }
-
-    .footer_box{
-        margin: 2.5%;
-        width: 95%;
+@media only screen and (max-width: 1024px) {
+    .page {
+        font-family: "Comic Sans MS", sans-serif;
     }
 }
