--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@ header {
     background-color: lightgray;
 }
 
-@media (max-width: 800px) {
-    .middleboxes {
-      flex-direction: column;
-    }
-  }
 .middleboxes {
     background-color: lightgray;
     width: 450px;
@@ -27,11 +22,19 @@ header {
     padding:20px;
 }
 
+@media (max-width: 1200px) {
+    .middleboxes {
+      flex-direction: column;
+      height: auto;
+    }
+}
+
 footer {
     display: flex;
     background-color: lightgray;
     width: 100%;
     height: 240px;
+    flex: 1 0 20px;
     clear: both;
     padding: 20px;
 }
@@ -43,11 +46,45 @@ footer {
     width: 150px;
     height: 200px;
     padding: 20px;
-
+    margin-bottom: 20px;
 }
 .footer_box:nth-child(1){
+    display: flex;
     margin-right: 20px;
+    flex: 1 0 20px;
+    height: 200px;
+    margin-bottom: 20px;
 }
 .footer_box:nth-child(2){
+    display: flex;
     margin-right: 20px;
+    flex: 1 0 20px;
+    height: 200px;
+    margin-bottom: 20px;
+}
+
+@media screen and (max-width: 1148px) {
+    footer{
+        flex-direction: row;
+        /* width:fit-content; */
+    }
+    .footer_box{
+        flex-direction: column;
+        word-break: break-all;
+        overflow:scroll;
+        /* height:fit-content; */
+    }
+    
+    /* .footer_box:nth-child(1){
+        flex-direction: column; */
+        /* flex-wrap:wrap; */
+        /*flex-grow: initial; */
+        /* height:auto; */
+    /* }
+    .footer_box:nth-child(2){ */
+        /* flex-wrap: wrap; */
+        /* flex-direction: column; */
+        /* flex-grow: inherit; */
+        /* height:auto; */
+    /* } */
 }
